2011-09-08
* Added -dieString to SWDice class, which returns the die/dice represented
  by an instance in xdx[+/-x] format.
* Added -tallyAsString to SWRollResult class, which returns the roll tally
  as a string, joined by commas.
* Added this change log file! :D